examples/resolver/primitives/fail/alloc_arity.axo
const ptr = alloc(8, 4)
print(ptr)
